--- a/Basic HTML/index.html
+++ b/Basic HTML/index.html
@@ -8,7 +8,8 @@
 </head>
 
 <body>
-    
+
+    <header>
     <h1>Index page</h1>
     <nav>
     <ul> 
@@ -17,49 +18,94 @@
         <li><a href="#">Item 3</a></li>
     </ul>
     </nav>
-    <a href="login.html">Goto login page</a>
+    <a href="login.html">Login page</a>
+    </header>
 
     <section>
-        <h2>The container element in size h2</h2>
-        <br>
+        <h2>Headline element in size h2</h2>
         <h3>One of the paragraphs in size h3</h3>
         <article class="Info">
             <h3>Good to know about Alicante</h3>
-            <h6>Written by Lars Brevén</h6>
             <p>Alicante is a big city located at Costa Blanca (the white coast) in Spain</p>
             <p>The main languages spoken in Spain are Castilian, as the official language – commonly known as spanish. Euskera spoken in the Basque Country, Galician spoken in Galicia and Catalan spoken in Catalonia. With Valencian, by some seen as a different language by others seen as a variation of Catalan, Spain has five different languages.</p>
-            <a href="alicante.com">Read more on this website</a>
+            <a href="https://www.alicante.com">Read more about Alicante</a>
         </article>
         <br>
         <article class="Info">
             <h3>The beaches at Costa Blanca</h3>
-            <small>Written by Lars Brevén</small>
             <p>Very close to the city and the lively harbour is the San Juan beach</p>
             <p>From the beach it is walking distance to the city center</p>
             <img src="alicante.jpg" alt="My sample image" width="200">
             <br>
-            <a href="alicanteturismo.com/en/alicante-beaches/">Read more about the beaches in Alicante</a>
+            <a href="https://www.alicanteturismo.com/en/alicante-beaches/">Read more about the beaches in Alicante</a>
         </article>
     </section>
 
     <aside>
-        <h3>Scandinavian countries</h3> <!-- Eventuellt header-element? -->
-        <nav>
-            <ol>    <!-- Här skall läggas in lista med 3 städer -->
-            <li>Sweden</li>
-
-
-
-
-
-            <li>Finland</li>
-            <li>Norway</li>
+        <h3>Scandinavian countries</h3>
+            <ol>
+                <li>
+                <h4>Sweden</h4>
+                <ul>
+                    <li>
+                        <span>
+                         Stockholm 
+                        </span>
+                    </li>
+                     <li>
+                        <span>
+                         Göteborg
+                        </span>
+                     </li> 
+                     <li>
+                        <span>
+                         Malmö
+                        </span>
+                     </li>  
+               </ul>
+               <li>
+                <h4>Finland</h4>
+                <ul>
+                    <li>
+                        <span>
+                         Helsinki 
+                        </span>
+                    </li>
+                     <li>
+                        <span>
+                         Tampere
+                        </span>
+                     </li> 
+                     <li>
+                        <span>
+                         Turku
+                        </span>
+                     </li>  
+               </ul>
+               <li>
+                <h4>Norway</h4>
+                <ul>
+                    <li>
+                        <span>
+                         Oslo 
+                        </span>
+                    </li>
+                     <li>
+                        <span>
+                         Bergen
+                        </span>
+                     </li> 
+                     <li>
+                        <span>
+                         Stavanger
+                        </span>
+                     </li>  
+               </ul>
         </ol>
-        </nav>
     </aside>
 
     <footer id="main-footer">
-        <p>Copyright &copy; 2021, Lars Brevén </p> <!-- Span element skall vara här -->
+        <span>Copyright &copy; 2021, Lars Brevén </span>
     </footer>
 
 </body>
