--- a/Basic HTML/login.html
+++ b/Basic HTML/login.html
@@ -9,8 +9,8 @@
 
 <body>
     
+    <header>
     <h1>Login page</h1>
-
     <nav>
     <ul> 
         <li><a href="#">Item 1</a></li>
@@ -18,18 +18,25 @@
         <li><a href="#">Item 3</a></li>
     </ul>
     </nav>
-
     <a href="index.html">Index page</a>
+    </header>
 
+    <div id="main-content">
+    <section>
     <h4>User login</h4>
-    <br>
-    <input type="text" name="userName">
-    <input type="text" name="passWord">
-    <button type="button">reset</button>
-    <button type="button">Sign in</button>
+    <form action="info" method="POST">
+        <label for="username">Username</label>
+        <input id="username" type="text"/>
+        <label for="password">Password</label>
+        <input id="password" type="text"/>
+        <input type="reset" value="Reset"/>
+        <input type="submit" value="Sign in"/>
+    </form>
+    </section>
+    </div>
 
     <footer id="main-footer">
-        <p>Copyright &copy; 2021, Lars Brevén </p> <!-- Span element skall vara här -->
+        <span>Copyright &copy; 2021, Lars Brevén </span>
     </footer>
 
 </body>
