--- a/Basic HTML/login.html
+++ b/Basic HTML/login.html
@@ -28,7 +28,7 @@
         <label for="username">Username</label>
         <input id="username" type="text"/>
         <label for="password">Password</label>
-        <input id="password" type="text"/>
+        <input id="password" type="password"/>
         <input type="reset" value="Reset"/>
         <input type="submit" value="Sign in"/>
     </form>
