site.css included

--- a/Basic HTML/index.html
+++ b/Basic HTML/index.html
@@ -5,12 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index.html file</title>
+    <link rel="stylesheet" href="site.css"> 
 </head>
 
 <body>
 
+<div class="container">
+
+
     <header>
-    <h1>Index page</h1>
+
+    <div class=sitename> 
+    <h1>Login page</h1>
+    </div> <!-- sitename -->
+  
     <nav>
     <ul> 
         <li><a href="#">Item 1</a></li>
@@ -21,6 +29,7 @@
     <a href="login.html">Login page</a>
     </header>
 
+    <!-- <div class="box-1"> -->
     <section>
         <h2>Headline element in size h2</h2>
         <h3>One of the paragraphs in size h3</h3>
@@ -104,9 +113,17 @@
         </ol>
     </aside>
 
+    </div>
+
+
+
+
     <footer id="main-footer">
         <span>Copyright &copy; 2021, Lars Brevén </span>
     </footer>
+
+  <!--   </div> -->
+
 
 </body>
 </html>
