--- a/Basic HTML/login.html
+++ b/Basic HTML/login.html
@@ -5,12 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login.html file</title>
+    <link rel="stylesheet" href="site.css">
 </head>
 
 <body>
     
+    <div class="container">
     <header>
-    <h1>Login page</h1>
+   
+    
+    <div class=sitename> 
+        <h1>Login page</h1>
+    </div> <!-- sitename -->
     <nav>
     <ul> 
         <li><a href="#">Item 1</a></li>
@@ -38,6 +44,10 @@
     <footer id="main-footer">
         <span>Copyright &copy; 2021, Lars Brevén </span>
     </footer>
+
+
+</div>
+
 
 </body>
 </html>
