Header included in css

--- a/Basic HTML/index.html
+++ b/Basic HTML/index.html
@@ -26,8 +26,16 @@
         <li><a href="#">Item 3</a></li>
     </ul>
     </nav>
-    <a href="login.html">Login page</a>
-    </header>
+
+
+    <div class=htmlpage>
+        <a href="login.html">Login page</a>
+        </div> <!-- htmlpage är OK -->
+
+
+</header>
+
+
 
     <!-- <div class="box-1"> -->
     <section>
