--- a/Basic HTML/index.html
+++ b/Basic HTML/index.html
@@ -1,4 +1,4 @@
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -16,8 +16,8 @@
     <header>
     <div class=sitename> 
     <h1>Login page</h1>
-    </div> <!-- sitename -->
-  
+    </div>
+
     <nav>
     <ul> 
         <li><a href="#">Item 1</a></li>
@@ -125,7 +125,7 @@
         <span>Copyright &copy; 2021, Lars Brevén </span>
     </footer>
 
-  <!--   </div> -->
+  
 
 
 </body>
